maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: not found: value random3
     	n=random3()
          ^